javascript development first pass

--- a/spa.html
+++ b/spa.html
@@ -29,7 +29,29 @@
         background-color: #f00
       }
     </style>
-    <script type="text/javascript"></script>
+    <script type="text/javascript">
+    /* jslint settings */
+    // Module /spa/
+    // Provides chat and slider capability
+      // Module scope variables
+        // set constants
+        // Declare all module scope variables
+
+      // DOM method /toggleSlider/
+      // alternate slider height
+
+      // Event handle /onClickSlider/
+      // receives click event and calls toggleSlider
+
+      // Public method /initModule/
+      // sets initial state and provides feature
+        // render HTML
+        // initialize slider height and title
+        // bind the user click event to the handler
+
+    // Start spa once DOM is ready
+
+    </script>
   </head>
   <body>
     <div id='spa'>
